# knight-streamer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: pch.hpp  version.h
include/interaction/: arguments.hpp  port_selection.hpp
include/neuropawn/: knight.hpp  knight_protocol_constants.h  knight_serial_interface.hpp
include/transmission/: eeg_messenger.hpp
include/utils/: cast.h  io_helpers.hpp  print_helpers.hpp  serial_helpers.hpp  vector3.hpp
src/: arguments.cpp  main.cpp
src/interaction/: arguments.cpp  port_selection.cpp
src/neuropawn/: knight.cpp  knight_protocol_parser.cpp  knight_samples.cpp  knight_serial_commands.cpp  knight_serial_interface.cpp
src/transmission/: eeg_messenger.cpp
src/utils/: io_helpers.cpp  print_helpers.cpp  serial_helpers.cpp
